--- a/templates/near.html
+++ b/templates/near.html
@@ -66,7 +66,7 @@
 				<!--<li><a href="search_spec.html">关键词匹配</a> </li>-->
 				<li class="active"><a href="near.html">知识查询</a> </li>
                 <li><a href="path.html">路径查询</a></li>
-                <!--<li><a href="add_post.html">人工操作</a></li>-->
+                <li><a href="add_post.html">人工操作</a></li>
 			</ul>
 		</div>
 	</div>
