--- a/templates/path.html
+++ b/templates/path.html
@@ -50,7 +50,7 @@
 				<!--<li><a href="search_spec.html">关键词匹配</a> </li>-->
 				<li><a href="near.html">知识查询</a> </li>
 				<li class="active"><a href="path.html">路径查询</a></li>
-                <!--<li><a href="add_post.html">人工操作</a></li>-->
+                <li><a href="add_post.html">人工操作</a></li>
 			</ul>
 		</div>
 	</div>
