--- a/templates/search_spec.html
+++ b/templates/search_spec.html
@@ -47,7 +47,7 @@
 				<li class="active"><a href="search_spec.html">关键词匹配</a> </li>
 				<li><a href="near.html">知识查询</a> </li>
                 <li><a href="path.html">关系查询</a></li>
-                <!--<li><a href="add_post.html">人工操作</a></li>-->
+                <li><a href="add_post.html">人工操作</a></li>
 			</ul>
 		</div>
 	</div>
